--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ a {
 
 .search__ordenation {
   white-space: nowrap;
-
+  margin-top: 32px;
   border-radius: 16px;
   border: none;
   position: relative;
@@ -265,8 +265,8 @@ a {
 /* Not found */
 
 .main__notfound {
+  display: none;
   max-width: 302px;
-  display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
